// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls "kbn:bootstrap" scripts and links executables after installing deps: link bins 1`] = `
Array [
  Array [
    Map {
      "kibana" => Project {
        "allDependencies": Object {
          "bar": "1.0.0",
        },
        "devDependencies": Object {},
        "isWorkspaceProject": false,
        "isWorkspaceRoot": true,
        "json": Object {
          "dependencies": Object {
            "bar": "1.0.0",
          },
          "name": "kibana",
          "version": "1.0.0",
          "workspaces": Object {
            "packages": Array [
              "packages/*",
            ],
          },
        },
        "nodeModulesLocation": "<repoRoot>/packages/kbn-pm/src/commands/node_modules",
        "packageJsonLocation": "<repoRoot>/packages/kbn-pm/src/commands/package.json",
        "path": "<repoRoot>/packages/kbn-pm/src/commands",
        "productionDependencies": Object {
          "bar": "1.0.0",
        },
        "scripts": Object {},
        "targetLocation": "<repoRoot>/packages/kbn-pm/src/commands/target",
        "version": "1.0.0",
      },
      "bar" => Project {
        "allDependencies": Object {},
        "devDependencies": Object {},
        "isWorkspaceProject": false,
        "isWorkspaceRoot": false,
        "json": Object {
          "name": "bar",
          "scripts": Object {
            "kbn:bootstrap": "node ./bar.js",
          },
          "version": "1.0.0",
        },
        "nodeModulesLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/node_modules",
        "packageJsonLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/package.json",
        "path": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar",
        "productionDependencies": Object {},
        "scripts": Object {
          "kbn:bootstrap": "node ./bar.js",
        },
        "targetLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/target",
        "version": "1.0.0",
      },
    },
    Map {
      "kibana" => Array [
        Project {
          "allDependencies": Object {},
          "devDependencies": Object {},
          "isWorkspaceProject": false,
          "isWorkspaceRoot": false,
          "json": Object {
            "name": "bar",
            "scripts": Object {
              "kbn:bootstrap": "node ./bar.js",
            },
            "version": "1.0.0",
          },
          "nodeModulesLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/node_modules",
          "packageJsonLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/package.json",
          "path": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar",
          "productionDependencies": Object {},
          "scripts": Object {
            "kbn:bootstrap": "node ./bar.js",
          },
          "targetLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/target",
          "version": "1.0.0",
        },
      ],
      "bar" => Array [],
    },
  ],
]
`;

exports[`calls "kbn:bootstrap" scripts and links executables after installing deps: script 1`] = `
Array [
  Array [
    Object {
      "args": Array [],
      "debug": undefined,
      "pkg": Project {
        "allDependencies": Object {},
        "devDependencies": Object {},
        "isWorkspaceProject": false,
        "isWorkspaceRoot": false,
        "json": Object {
          "name": "bar",
          "scripts": Object {
            "kbn:bootstrap": "node ./bar.js",
          },
          "version": "1.0.0",
        },
        "nodeModulesLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/node_modules",
        "packageJsonLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/package.json",
        "path": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar",
        "productionDependencies": Object {},
        "scripts": Object {
          "kbn:bootstrap": "node ./bar.js",
        },
        "targetLocation": "<repoRoot>/packages/kbn-pm/src/commands/packages/bar/target",
        "version": "1.0.0",
      },
      "script": "kbn:bootstrap",
    },
  ],
]
`;

exports[`does not run installer if no deps in package: install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands",
    Array [],
  ],
]
`;

exports[`handles "frozen-lockfile": install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands",
    Array [
      "--frozen-lockfile",
    ],
  ],
]
`;

exports[`handles dependencies of dependencies: install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands",
    Array [],
  ],
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands/packages/bar",
    Array [],
  ],
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands/packages/foo",
    Array [],
  ],
]
`;
